--- a/src/App.css
+++ b/src/App.css
@@ -31,5 +31,5 @@ button:hover {
 
 /* App.css */
 body {
-  background-color: red; /* Test background */
+  background-color: #00cc1d; /* Test background */
 }
